Fixed bugs related to data validation and the editing window. I also added a dev.config.mjs file for the npm run dev console command, as the esbuild.config.mjs file is used for another console command, npm run build.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "This is a financial accounting plugin for Obsidian",
 	"main": "dist/main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
+		"dev": "node dev.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs"
 	},
