--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Financial Accounting",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Financial control system directly in Obsidian without an internet connection.",
+	"description": "Financial control system directly without internet connection.",
 	"author": "Bugayev Daniil",
 	"authorUrl": "https://github.com/Morok1407",
 	"isDesktopOnly": false
